@@ -613,6 +613,26 @@
     permission="zope.View"
     />
 
+
+  <browser:viewlet
+    for="zeit.content.article.interfaces.IArticle"
+    layer="zeit.cms.browser.interfaces.ICMSLayer"
+    view=".form.MiscForms"
+    manager="zeit.edit.interfaces.IContentViewletManager"
+    name="edit.form.options-c"
+    class="zeit.edit.browser.form.FormLoader"
+    permission="zope.View"
+    weight="3"
+    />
+
+  <browser:page
+    for="zeit.content.article.interfaces.IArticle"
+    layer="zeit.cms.browser.interfaces.ICMSLayer"
+    name="edit.form.options-c"
+    class=".form.OptionsC"
+    permission="zope.View"
+    />
+
   <browser:viewlet
     for="zeit.content.article.interfaces.IArticle"
     layer="zeit.cms.browser.interfaces.ICMSLayer"
@@ -621,7 +641,7 @@
     name="edit.form.options-productmanagement"
     class="zeit.edit.browser.form.FormLoader"
     permission="zope.View"
-    weight="3"
+    weight="4"
     />
 
   <browser:page
